# tasks

./: .gitignore
.github/workflows/: api.yml
aws-python-http-api-project/: serverless.yml
services/tasks_api/: main.py  package-lock.json  package.json  pyproject.toml  serverless.yml  tests.py
